@@ -42,7 +42,8 @@ NoN(hexpand)
 static char *modifiers = "htrepqxs&";
 static int mod_flags[] = { 0, 0, 0, 0, HIST_PRINT, HIST_QUOTE, HIST_QUOTE|HIST_QUOTE_BR, 0, 0 };
 
-#define	DONE()	{flag |= HIST_ERROR; cp = 0; stakseek(0); goto done;}
+#define DONE		{ stakseek(0); goto done; }
+#define ERROROUT	{ flag |= HIST_ERROR; DONE; }
 
 struct subst
 {
@@ -128,6 +129,16 @@ static char *parse_subst(const char *s, struct subst *sb)
 }
 
 /*
+ * return true if c is a word boundary character, i.e. the
+ * character following c is considered to start a new word
+ */
+
+static int is_wordboundary(char c)
+{
+	return isspace(c) || strchr("|&;()`<>",c);
+}
+
+/*
  * history expansion main routine
  */
 
@@ -200,11 +211,19 @@ int hist_expand(const char *ln, char **xp)
 			continue;
 		}
 
-		if(hc[2] && *cp == hc[2]) /* history comment designator, skip rest of line */
+		if(hc[2] && *cp == hc[2])
 		{
-			stakputc(*cp++);
-			stakputs(cp);
-			DONE();
+			if(cp == ln || is_wordboundary(cp[-1]))
+			{
+				/* word begins with history comment character; skip rest of line */
+				stakputs(cp);
+				DONE;
+			}
+			else
+			{
+				stakputc(*cp++);
+				continue;
+			}
 		}
 
 		n = -1;
@@ -322,7 +341,7 @@ getline:
 			*cp = '\0';
 			errormsg(SH_DICT, ERROR_ERROR, "%s: event not found", evp);
 			*cp = c;
-			DONE();
+			ERROROUT;
 		}
 
 		if(str) /* string search: restore orig. line */
@@ -427,7 +446,7 @@ getline:
 			*cp = '\0';
 			errormsg(SH_DICT, ERROR_ERROR, "%s: bad word specifier", evp);
 			*cp = c;
-			DONE();
+			ERROROUT;
 		}
 
 		/* no valid word designator after colon, rewind */
@@ -488,7 +507,7 @@ getsel:
 			*cp = '\0';
 			errormsg(SH_DICT, ERROR_ERROR, "%s: bad word specifier", evp);
 			*cp = c;
-			DONE();
+			ERROROUT;
 		}
 		else if(w[1] == -2)	/* skip last word */
 			sfseek(tmp, i, SEEK_SET);
@@ -548,7 +567,7 @@ getsel:
 			else
 			{
 				errormsg(SH_DICT, ERROR_ERROR, "%c: unrecognized history modifier", c);
-				DONE();
+				ERROROUT;
 			}
 
 			if(c == 'h' || c == 'r') /* head or base */
@@ -608,7 +627,7 @@ getsel:
 						(flag & HIST_QUICKSUBST) ? ":s" : "",
 						evp);
 					*cp = c;
-					DONE();
+					ERROROUT;
 				}
 
 				/* need pointer for strstr() */
@@ -636,7 +655,7 @@ getsel:
 							(flag & HIST_QUICKSUBST) ? ":s" : "",
 							evp);
 						*cp = c;
-						DONE();
+						ERROROUT;
 					}
 					/* loop if g modifier specified */
 					if(!tempcp || !(flag & HIST_GLOBALSUBST))
